# neuralnet

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  activation_functions.h  console_utils.h  layer.h  main.cpp  neural_net.cpp  neural_net.h  neuron.h  synapse.h
test/: CMakeLists.txt  activation_functions_test.h  main.cpp  neural_net_test.h  neural_net_wrapper.h  util.h
test/common/: neural_net_wrapper.h  util.h
test/ut/: activation_functions_test.h  neural_net_test.h
